--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="col s12 m4 l4">
       <h6>Summary and Objectives</h6>
       <p>
-        I am a dedicated student of computer science, driven by a passion to enhance my skills and personal growth. I aspire to cultivate strong teamwork abilities and thrive in collaborative work environments.
+        As a dedicated computer engineering student, I strongly desire to further my knowledge and promote personal development in the industry. In addition to becoming an exceptional individual, I also want to develop strong cooperation skills. I want to thrive in collaborative work environments where different viewpoints come together to tackle challenging problems. I am eager to make a significant contribution to initiatives that push the boundaries of technology and have a positive influence on society as I am passionate about innovation and I seek knowledge relentlessly.
       </p>
     </div>
 
